New Dependency Graph - "frame" python driver expression not working #50331

Closed
opened 2016-12-27 19:14:59 +01:00 by Adam W. Parker · 11 comments

Windows 64bit 2.78a

When "frame" is used as expression to drive a value (whether node value, mesh value, or custom property) it does not update upon frame change. User can also manually change the value despite the driver being enabled.

"frame" driver works fine with identical versions with old depsgraph enabled.

T50331_frame_expression.blend

Windows 64bit 2.78a When "frame" is used as expression to drive a value (whether node value, mesh value, or custom property) it does not update upon frame change. User can also manually change the value despite the driver being enabled. "frame" driver works fine with identical versions with old depsgraph enabled. [T50331_frame_expression.blend](https://archive.blender.org/developer/F424121/T50331_frame_expression.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamParker

Added subscriber: @AdamParker
Sergey Sharybin was assigned by Aaron Carlisle 2016-12-27 20:57:12 +01:00

I remember fixing related issue. Since there are multiple ways such a driver is created please attach simple .blend file with your particular driver which fails.

I remember fixing related issue. Since there are multiple ways such a driver is created please attach simple .blend file with your particular driver which fails.

Added subscriber: @mont29

Added subscriber: @mont29

@AdamParker please add comments rather than editing original report to answer other comments, otherwise it’s very hard to tell what has been answered or not!

@AdamParker please add comments rather than editing original report to answer other comments, otherwise it’s very hard to tell what has been answered or not!

This issue was referenced by a90622ce93

This issue was referenced by a90622ce935acfe769e3100c83a8bb1f5c0ecaec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Branskugel

Added subscriber: @Branskugel

I'd like to resurrect this issue. Stumbled upon it in my personal file. Can be triggered by typing "#frame" into a value field as the quick way to create driver. Triggered in node inputs and object custom properties. Does NOT get triggered if you first add driver through context menu and then edit it either in pop up driver editor or in 'standalone' one

Windows 10 x64, Blender 3.0.1 stable

I'd like to resurrect this issue. Stumbled upon it in my personal file. Can be triggered by typing "#frame" into a value field as the quick way to create driver. Triggered in node inputs and object custom properties. Does NOT get triggered if you first add driver through context menu and then edit it either in pop up driver editor or in 'standalone' one Windows 10 x64, Blender 3.0.1 stable

Can you please submit a new bug report about it?
Checking open reports before submitting bugs is welcome and great and it helps avoiding duplicated reports. For the closed/fixed issues adding more and more specific cases will make it quickly hard to follow or reference from the code or see what exactly was reasoning of specific code to exist.

Can you please submit a new bug report about it? Checking open reports before submitting bugs is welcome and great and it helps avoiding duplicated reports. For the closed/fixed issues adding more and more specific cases will make it quickly hard to follow or reference from the code or see what exactly was reasoning of specific code to exist.

In #50331#1308741, @Sergey wrote:
Can you please submit a new bug report about it?
Checking open reports before submitting bugs is welcome and great and it helps avoiding duplicated reports. For the closed/fixed issues adding more and more specific cases will make it quickly hard to follow or reference from the code or see what exactly was reasoning of specific code to exist.

Thank you for pointing me in the right direction, Sergey. I am new to reporting bugs and after I've taken all the necessary steps to make the report I realized that (1) it either has already been fixed or (2) was happening only on my side thanks to an addon. Sorry to bother!

> In #50331#1308741, @Sergey wrote: > Can you please submit a new bug report about it? > Checking open reports before submitting bugs is welcome and great and it helps avoiding duplicated reports. For the closed/fixed issues adding more and more specific cases will make it quickly hard to follow or reference from the code or see what exactly was reasoning of specific code to exist. Thank you for pointing me in the right direction, Sergey. I am new to reporting bugs and after I've taken all the necessary steps to make the report I realized that (1) it either has already been fixed or (2) was happening only on my side thanks to an addon. Sorry to bother!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50331
No description provided.