Fix T50331: New Dependency Graph - "frame" python driver expression not working